; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/gpioctl/extr_gpioctl.c_str2int.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/gpioctl/extr_gpioctl.c_str2int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32*)* @str2int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @str2int(i8* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32* %1, i32** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @strtod(i8* %7, i8** %5)
  store i32 %8, i32* %6, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = call i32 @strlen(i8* %11)
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8, i8* %10, i64 %13
  %15 = icmp ne i8* %9, %14
  br i1 %15, label %16, label %18

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  store i32 0, i32* %17, align 4
  br label %20

18:                                               ; preds = %2
  %19 = load i32*, i32** %4, align 8
  store i32 1, i32* %19, align 4
  br label %20

20:                                               ; preds = %18, %16
  %21 = load i32, i32* %6, align 4
  ret i32 %21
}

declare dso_local i32 @strtod(i8*, i8**) #1

declare dso_local i32 @strlen(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
